test-cases/valid/reject/undefined_function.ul
void main() {
    foo(); // No such function
}
